<resources>
    <string name="app_name">TestyPuzzle</string>
    <string name="play">Play</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="congratulations">Congratulations!</string>
    <string name="next_level">Next Level</string>
    <string name="level_completed">Level Completed</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
    <string name="how_to_play_text">Drag the puzzle pieces to their correct positions to complete the image. Touch and hold a piece to move it. The level is completed when all pieces are correctly placed.</string>
    <string name="all_levels_completed">You have completed all levels!</string>
    <string name="level">Level %d</string>
    <string name="loading_images">Loading images…</string>
    <string name="error_loading_images">Failed to load online images. Using local images.</string>
</resources>